# foxyon

./: Cargo.toml  README.md  config.toml  setup.sh
assets/src/: worker.js
src/: allocator.rs  config.rs  lib.rs  main.rs  pow.rs  system.rs
src/crypto/: blake3.rs
src/routes/: auth.rs  challenge.rs  mod.rs
src/session/: challenge_blacklist.rs  local.rs  mod.rs  redis.rs
systemd/: foxyon.service
templates/: challenge.html  challenge.old.html
tools/: debug_headers.py  minify.bat
